# feed-booru

./: main.py  pyproject.toml  weneedfeed.yml
.github/workflows/: static.yml
